Add basic style to home page

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,10 @@
 	<title>
 		Chromophile
 	</title>
+	<link rel = "stylesheet" href = "./assets/css/application.css">
+	<script src = "./assets/js/jquery-2.1.0.min.js"></script>
+	<script src = "./assets/js/color-thief.js"></script>
+	<script src = "./assets/js/application.js"></script>
 </head>
 <body>
 <div id = "content">
