Add tutorial pane

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,14 @@
 	</div>
 </div>
 <div id = "tutorial">
+	<span id = "tutorialTitle">How to Play</span><br>
+	<img src = "./assets/images/sample.jpg">
+	<div id = "tutorialGuide">
+		Mark three points in the image so as the line joining the two diagonally opposite points, passing through the three points, suffer minimum deviation from the dominant color.
+		<div id = "tutorialButton" onclick = "fadeToHome()">
+		Got it ! Start !
+		</div>
+	</div>
 </div>
 </body>
 </html>
