Client now recieves levels

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,9 @@
 		Chromophile
 	</div>
 	<div id = "levelSelect">
-		<div class = "level">
+		<div id = "levelTitle">Stage Select</div>
+		<div id = "levels">
+			
 		</div>
 	</div>
 	<div id = "play">
