--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,12 @@
 		</div>
 	</div>
 	<div id = "play">
-		<img src = "">
+		<div id = "playImage">
+			
+		</div>
+		<div id = "playInfo">
+			
+		</div>
 	</div>
 </div>
 <div id = "tutorial">
