--- a/client/index.html
+++ b/client/index.html
@@ -21,9 +21,9 @@
 		</div>
 	</div>
 	<div id = "play">
-		<div id = "playImage">
+		<canvas width = "600" height = "400" id = "playImage" onclick="getCoord(event)">
 			
-		</div>
+		</canvas>
 		<div id = "playInfo">
 			
 		</div>
