Add submission functions

--- a/client/index.html
+++ b/client/index.html
@@ -21,12 +21,15 @@
 		</div>
 	</div>
 	<div id = "play">
-		<canvas width = "600" height = "400" id = "playImage" onclick="getCoord(event)">
+		<canvas width = "600" height = "400" id = "playImage">
 			
 		</canvas>
 		<div id = "playInfo">
 			
 		</div>
+	</div>
+	<div id = "score">
+		
 	</div>
 </div>
 <div id = "tutorial">
