--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
 	<title>
 		Chromophile
 	</title>
+	<link rel = "shortcut icon" href = "./assets/images/color-wheel.png">
 	<link rel = "stylesheet" href = "./assets/css/application.css">
 	<script src = "./assets/js/jquery-2.1.0.min.js"></script>
 	<script src = "./assets/js/color-thief.js"></script>
@@ -29,7 +30,7 @@
 		</div>
 	</div>
 	<div id = "score">
-		
+
 	</div>
 </div>
 <div id = "tutorial">
