Add highscore tracking and congratulation div

--- a/client/index.html
+++ b/client/index.html
@@ -43,5 +43,14 @@
 		</div>
 	</div>
 </div>
+<div id = "congrats" onclick = "okCongrats()">
+	<img src = "./assets/images/star.png">
+	<img src = "./assets/images/star.png">
+	<img src = "./assets/images/star.png">
+	<hr>
+	<p>
+		Congrats !! You just made a high score !
+	</p>
+</div>
 </body>
 </html>
